# object-detection-simulation

./: package.xml  setup.cfg  setup.py
field_camera_sim/: object_detection.py
launch/: camera_sim_launch.py
models/camera/: model.config  model.sdf
models/man/: model.sdf
worlds/: field.sdf  field.world
